Removido mocks + Definição de métodos CRUD + Persistência e configuração do acesso ao banco de dados local com segurança integrada do windows

--- a/03 ApiRest.Net Person/ApiRest.Net/ApiRest.Net/ApiRest.Net.csproj
+++ b/03 ApiRest.Net Person/ApiRest.Net/ApiRest.Net/ApiRest.Net.csproj
@@ -1,7 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ApiRest\Net\services\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
