--- a/03 ApiRest.Net Person/ApiRest.Net/ApiRest.Net/appsettings.json
+++ b/03 ApiRest.Net Person/ApiRest.Net/ApiRest.Net/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "SQLServerConnection": {
+    "SQLServerConnectionString": "Server=DESKTOP-PTB8KO9\\SQLEXPRESS; Database= apirest; Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
