Generic repository: Base entity and GenericImplementation. Renamed Person property (id -> Id)

--- a/09 APIRest.Net Generic Repository/ApiRest.Net/ApiRest.Net/ApiRest.Net.csproj
+++ b/09 APIRest.Net Generic Repository/ApiRest.Net/ApiRest.Net/ApiRest.Net.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repository\NovaPasta\**" />
+    <Content Remove="Repository\NovaPasta\**" />
+    <EmbeddedResource Remove="Repository\NovaPasta\**" />
+    <None Remove="Repository\NovaPasta\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Evolve" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
